--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Das Zuberleben ist schön!!!! ÜBERSCHRIFT</h1>
-<p>This is a paragraph. klasse</p>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
