--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>Das Zuberleben ist schön!!!! ÜBERSCHRIFT</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html>
+<div class="bg animated fadeIn"></div>
+<header class="hero animated fadeIn">
+<div class="container">
+<h1 class="logo"></h1>
+<h1 class="coming-soon">DISEGNA SACCHETTA</h2>
+<p class="message">My design portfolio is getting a fresh new look and game plan. If you are looking for my blog, you can find that <a href="http://blog.disegnasacchetta.net">here</a>. Meanwhile you can catch me on the below sites or get in touch using my email.</p>
+<div class="social">
+<a href="https://facebook.com/DisegnaSacchetta"></a>
+<a href="https://twitter.com/domierosina"></a>
+<a href="mailto:domenica.burroughs@gmail.com"></a>
+<a href="http://instagram.com/domierosina"></a>
+</div>
+</div>
+</header>
