--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <header class="hero animated fadeIn">
 <div class="container">
 <h1 class="logo"></h1>
-<h1 class="coming-soon">DISEGNA SACCHETTA</h2>
-<p class="message">My design portfolio is getting a fresh new look and game plan. If you are looking for my blog, you can find that <a href="http://blog.disegnasacchetta.net">here</a>. Meanwhile you can catch me on the below sites or get in touch using my email.</p>
-<div class="social">
-<a href="https://facebook.com/DisegnaSacchetta"></a>
-<a href="https://twitter.com/domierosina"></a>
-<a href="mailto:domenica.burroughs@gmail.com"></a>
-<a href="http://instagram.com/domierosina"></a>
-</div>
+<h1 class="coming-soon">Zuberey "Lotoris Jenensis"</h2>
+<p class="message">Willkommen bei den Badern aus Jena. Wir sind eine kleine Vereinigung junger Darsteller des Badewesens im 15 Jahrhundert. Zur Zeit befindet sich
+  unser Projekt und diese Webseite noch in der Aufbauphase. Auf der Internetseite werden zukünftig Termine, Fotos und Informationen für Besucher von
+  Mittelaltermärkten, Burgfesten usw. bereit gestellt. Bis September 2018 müsst ihr euch noch gedulden.</p>
 </div>
 </header>
