--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <div class="bg animated fadeIn"></div>
 <header class="hero animated fadeIn">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 <div class="container">
 <h1 class="logo"></h1>
 <h1 class="coming-soon">Zuberey "Lotoris Jenensis"</h2>
