--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <link rel="stylesheet" href="style.css">
 <div class="container">
 <h1 class="logo"></h1>
-<h1 class="coming-soon">Zuberey "Lotoris Jenensis"</h2>
-<p class="message">Willkommen bei den Badern aus Jena. Wir sind eine kleine Vereinigung junger Darsteller des Badewesens im 15 Jahrhundert. Zur Zeit befindet sich
+<h1 class="coming-soon">Zuberey "Lotoris ex Jhena"</h2>
+<p class="message">Willkommen! Wir sind die Bader aus Jena - eine kleine Vereinigung junger Darsteller des Badewesens im 15 Jahrhundert. Zur Zeit befindet sich
   unser Projekt und diese Webseite noch in der Aufbauphase. Auf der Internetseite werden zukünftig Termine, Fotos und Informationen für Besucher von
-  Mittelaltermärkten, Burgfesten usw. bereit gestellt. Bis September 2018 müsst ihr euch noch gedulden.</p>
+  Mittelaltermärkten, Burgfesten usw. bereit gestellt. Bis Ende 2018 müsst ihr euch noch gedulden.</p>
 </div>
 </header>
