--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </thead>
             <tbody>
               <tr>
-                <td>September 2019 (In Planung)</td>
+                <td>7. bis 8. September 2019 (In Planung)</td>
                 <td><a href="https://burgfreunde-lichtenberg.de" target="_blank">Burgfest Lichtenberg</a></td>
               </tr>
             </tbody>
