--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         <div class="col-lg-9 mx-auto">
           <h2>Die Zuberey "Lotoris ex Jhena"</h2>
           <p>Das Badewesen pflegt eine alte Tradition, deren Ursprünge bereits durch die Römer gelegt wurden. Die Germanen prägten in Skandinavien die Badekultur. Über das Mittelalter, bis in die Neuzeit, hat sich diese Tardition gehalten, aber auch
-            stark
+            zunehmend
             verändert. Wir wollen diesen Teil des gesellschaftlichen Lebens im 15. Jahrhundert aufgreifen. Dabei geht es uns nicht nur um den Spaß am Baden, sondern auch um das Leben einer alten Gepflogenheit.</p>
-          <p>Wir orientieren uns an dem Badewesen und dem Beruf des Baders zwischen 1480 und 1580 im dörflichen Leben. Eine genaue Darstellung ist nicht immer exakt möglich. Wir versuchen dennoch uns an den wenigen Quellen, die das Badewesen zu
+          <p>Wir orientieren uns am Badewesen und dem Beruf des Baders zwischen 1480 und 1580 im ländlichen Raum. Eine genaue Darstellung ist nicht immer exakt möglich. Wir versuchen dennoch uns an den wenigen Quellen, die das Badewesen zu
             dieser Zeit
             belegen, zu orinetieren.</p>
           <p>Schaut doch mal bei uns vorbei! Wir freuen uns über jeden interessierten Besuch.</p>
@@ -140,6 +140,10 @@
                 <td>7. bis 8. September 2019 (In Planung)</td>
                 <td><a href="https://burgfreunde-lichtenberg.de" target="_blank">Burgfest Lichtenberg</a></td>
               </tr>
+              <tr>
+                <td>21. bis 22. April 2019</td>
+                <td><a href="https://burg-liebstedt.de" target="_blank">Mittelalterlicher Markt zum Osterfest</a></td>
+              </tr>
             </tbody>
           </table>
         </div>
@@ -153,11 +157,11 @@
       <div class="row">
         <div class="col-lg-9 mx-auto">
           <h3>Das Badehaus und der Bader</h3>
-          <p>Badehäuser dienten im Mittelalter nicht nur der Entspannung, Hygiene und Regenration des Körpers. Es waren auch Orte, um
+          <p>Badehäuser dienten im Mittelalter nicht nur der Entspannung, Hygiene und Regenration des Körpers. Es waren auch Orte um
             Krankheiten vorzubeugen. Dabei war der Zuber, also der hölzerne Bottich, nur eine Komponente. Die damaligen Badehäuser waren
-            eher Dampfbäder. Badebottiche dienten oftmals der Reinigung nach einer Schwitzkur. Um ein einfaches Dampfbad in Zimmern
-            oder im Garten zu einfach bauen, wurde ein Badebottich mit Leinenstoff in Form eines Baldachims umschlossen. Solch ein Ort
-            trug dann die Bezeichnung "Baderhof". Das Umschließen mit Leinen, sollte vorrangig ein Abkühlen des Wassers verhindern.</p>
+            eher Dampfbäder. Badebottiche dienten oftmals der Reinigung nach einer Schwitzkur. Um ein einfaches Dampfbad in Räumen
+            oder im Garten zu bauen, wurde ein Badebottich mit Leinenstoff in Form eines Baldachims umschlossen. Solch ein Ort
+            trug dann die Bezeichnung "Baderhof". Das Umschließen mit Leinen sollte vorrangig ein Abkühlen des Wassers verhindern.</p>
           <p>Während des Badens wurden neben Dufstoffen und Rosenblättern auch gerne etherische Öle dem Wasser beigefügt.</p>
           <p>Ein Bader führte seine Arbeit nur selten alleine durch. In einem Badehaus arbeitete der Meister zusammen mit
             Badeknechten, -mägden oder -frauen, welche unter seiner Obhut ausgebildet wurden. Ihnen wurden oft einfache Aufgaben, wie Holz holen,
