--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-9 mx-auto">
-          <h2>Hier sind wir in nächster Zeit zu finden.</h2>
+          <h2>Hier sind wir in nächster Zeit zu finden</h2>
           <table class="table table-hover">
             <thead>
               <tr>
@@ -142,7 +142,7 @@
               </tr>
               <tr>
                 <td>21. bis 22. April 2019</td>
-                <td><a href="https://burg-liebstedt.de" target="_blank">Mittelalterlicher Markt zum Osterfest</a></td>
+                <td><a href="https://burg-liebstedt.de" target="_blank">Ostermarkt Liebstedt</a></td>
               </tr>
             </tbody>
           </table>
