--- a/index.html
+++ b/index.html
@@ -92,35 +92,38 @@
   </section>
 
   <!-- About Slider -->
-  <!-- Der Slider mit den Bildern ist derzeit noch ausgeblendet. Die Bilder folgen noch
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-      <div class="carousel-item active">
-      <img class="d-block w-100" src="img/slide-1.jpg" alt="First slide">
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="img/slide-0.jpeg" alt="First slide">
+      <!--
       <div class="carousel-caption d-none d-md-block">
-      <h5>Überschrift</h5>
-      <p>Bildbeschrebung</p>
+        <h5>Überschrift</h5>
+        <p>Bildbeschrebung</p>
+      </div>
+    -->
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/slide-1.jpeg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/slide-2.jpeg" alt="Third slide">
     </div>
   </div>
-  <div class="carousel-item">
-  <img class="d-block w-100" src="img/slide-2.jpg" alt="Second slide">
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Vor</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Zurück</span>
+  </a>
 </div>
-</div>
-<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-<span class="sr-only">Vor</span>
-</a>
-<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-<span class="carousel-control-next-icon" aria-hidden="true"></span>
-<span class="sr-only">Zurück</span>
-</a>
-</div>
--->
 
   <!-- Termine Section -->
   <section id="termine" class="content-section text-center">
