--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -59,7 +59,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-9 mx-auto">
-            <h1 class="brand-heading">Zuberey "Lotoris ex Jhena"</h1>
+            <h1 class="brand-heading">Zuberey "Lotoris ex Jenensis"</h1>
             <p class="intro-text">Willkommen bei den Badern aus Jena. Wir sind eine kleine Gruppe junger Darsteller des Badewesens im 15 Jahrhundert. Auf unserer Webseite findet ihr ein paar Informationen über uns, den Beruf des Baders im
               Mittelalter, sowie Termine wo wir
               zu finden sind.</p>
