--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-9 mx-auto">
-          <h2>Die Zuberey "Lotoris ex Jhena"</h2>
+          <h2>Die Zuberey "Lotoris ex Jenensis"</h2>
           <p>Das Badewesen pflegt eine alte Tradition, deren Ursprünge bereits durch die Römer gelegt wurden. Die Germanen prägten in Skandinavien die Badekultur. Über das Mittelalter, bis in die Neuzeit, hat sich diese Tardition gehalten, aber auch
             zunehmend
             verändert. Wir wollen diesen Teil des gesellschaftlichen Lebens im 15. Jahrhundert aufgreifen. Dabei geht es uns nicht nur um den Spaß am Baden, sondern auch um das Leben einer alten Gepflogenheit.</p>
