--- a/index.html
+++ b/index.html
@@ -140,13 +140,9 @@
             </thead>
             <tbody>
               <tr>
-                <td>7. bis 8. September 2019 (In Planung)</td>
-                <td><a href="https://burgfreunde-lichtenberg.de" target="_blank">Burgfest Lichtenberg</a></td>
-              </tr>
-              <tr>
-                <td>21. bis 22. April 2019</td>
-                <td><a href="https://burg-liebstedt.de" target="_blank">Ostermarkt Liebstedt</a></td>
-              </tr>
+                <td>30. Mai bis 01. Juni 2020 (In Planung)</td>
+                <td><a href="https://www.crana-historica.de" target="_blank">Crana Historica</a></td>
+              </tr>         
             </tbody>
           </table>
         </div>
