--- a/index.html
+++ b/index.html
@@ -142,7 +142,17 @@
               <tr>
                 <td>30. Mai bis 01. Juni 2020 (In Planung)</td>
                 <td><a href="https://www.crana-historica.de" target="_blank">Crana Historica</a></td>
-              </tr>         
+              </tr>
+              <tr>
+                <td>27. Juni 2020 (In Planung)</td>
+                <td><a>Offene Höfe Jena-Löbstedt</a></td>
+              </tr>
+              <tr>
+                <td>04. September bis 05. September 2020 (In Planung)</td>
+                <td>
+                  <a class="nav-link" href="" data-toggle="modal" data-target="#Lichtenberg_Modal">Burgfest Lichtenberg</a>
+                 </td>
+              </tr>
             </tbody>
           </table>
         </div>
@@ -348,6 +358,28 @@
       </div>
     </div>
   </div>
+  
+<!--Modal Lichtenberg Bild-->
+
+<div class="modal fade" id="Lichtenberg_Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       <img src="\images\147_1.jpg" class="img-fluid" alt="Responsive image">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Schließen</button>
+      </div>
+    </div>
+  </div>
+</div>
+  
 
 
   <!-- Footer -->
