--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         </button>
       </div>
       <div class="modal-body">
-       <img src="\images\147_1.jpg" class="img-fluid" alt="Responsive image">
+       <img src="img\147_1.jpg" class="img-fluid" alt="Responsive image">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Schließen</button>
