--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
             </thead>
             <tbody>
               <tr>
-                <td>04. Juli bis 06. Juli 2022 (In Planung)</td>
+                <td>04. Juli bis 06. Juli 2022</td>
                 <td><a href="https://www.crana-historica.de" target="_blank">Crana Historica</a></td>
               </tr>
               <tr>
-                <td>02. September bis 04. September 2022 (In Planung)</td>
+                <td>10. September bis 11. September 2022</td>
                 <td>
                   <a class="nav-link" href="" data-toggle="modal" data-target="#Lichtenberg_Modal">Burgfest Lichtenberg</a>
                  </td>
