--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <!--<tr>
                 <td>04. Juli bis 06. Juli 2022</td>
                 <td><a href="https://www.crana-historica.de" target="_blank">Crana Historica</a></td>
-              </tr>
+              </tr>-->
               <tr>
-                <td>10. September bis 11. September 2022</td>
+                <td>09. September bis 10. September 2023</td>
                 <td>
-                  <a class="nav-link" href="" data-toggle="modal" data-target="#Lichtenberg_Modal">Burgfest Lichtenberg</a>
+                  <!--<a class="nav-link" href="" data-toggle="modal" data-target="#Lichtenberg_Modal">-->Burgfest Lichtenberg</a>
                  </td>
               </tr>
             </tbody>
@@ -381,7 +381,7 @@
   <!-- Footer -->
   <footer>
     <div class="container text-center">
-      <p>Copyright &copy; www.zuberey.de 2022</p>
+      <p>Copyright &copy; www.zuberey.de 2023</p>
     </div>
   </footer>
 
