--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <tr>
                 <td>09. September bis 10. September 2023</td>
                 <td>
-                  <!--<a class="nav-link" href="" data-toggle="modal" data-target="#Lichtenberg_Modal">-->Burgfest Lichtenberg</a>
+                  <!--<a class="nav-link" href="" data-toggle="modal" data-target="#Lichtenberg_Modal">Burgfest Lichtenberg</a>-->Burgfest Lichtenberg
                  </td>
               </tr>
             </tbody>
