--- a/index.html
+++ b/index.html
@@ -139,12 +139,16 @@
               </tr>
             </thead>
             <tbody>
-              <!--<tr>
-                <td>04. Juli bis 06. Juli 2022</td>
-                <td><a href="https://www.crana-historica.de" target="_blank">Crana Historica</a></td>
-              </tr>-->
               <tr>
-                <td>09. September bis 10. September 2023</td>
+                <td>15. Mai bis 20. Mai 2024</td>
+                <td><a href="https://www.crana-historica.de" target="_blank">Crana Historica</a></td>
+              </tr>
+              <tr>
+                <td>4. August 2024</td>
+                <td>Kemenate Orlamünde</a></td>
+              </tr>
+              <tr>
+                <td>12. September bis 13. September 2024</td>
                 <td>
                   <!--<a class="nav-link" href="" data-toggle="modal" data-target="#Lichtenberg_Modal">Burgfest Lichtenberg</a>-->Burgfest Lichtenberg
                  </td>
