--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Zuberey | Lotoris ex Jhena</title>
+  <title>Zuberey | Lotores Ex Jenensis</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -59,7 +59,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-9 mx-auto">
-            <h1 class="brand-heading">Zuberey "Lotoris ex Jenensis"</h1>
+            <h1 class="brand-heading">Zuberey "Lotores Ex Jenensis"</h1>
             <p class="intro-text">Willkommen bei den Badern aus Jena. Wir sind eine kleine Gruppe junger Darsteller des Badewesens im 15 Jahrhundert. Auf unserer Webseite findet ihr ein paar Informationen über uns, den Beruf des Baders im
               Mittelalter, sowie Termine wo wir
               zu finden sind.</p>
