--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="row">
         <div class="col-lg-9 mx-auto">
           <h2>Die Zuberey "Lotoris ex Jenensis"</h2>
-          <p>Das Badewesen pflegt eine alte Tradition, deren Ursprünge bereits durch die Römer gelegt wurden. Die Germanen prägten in Skandinavien die Badekultur. Über das Mittelalter, bis in die Neuzeit, hat sich diese Tardition gehalten, aber auch
+          <p>Das Badewesen pflegt eine alte Tradition, deren Ursprünge bereits durch die Römer gelegt wurden. Schon die Völker in Skandinavien prägten die Badekultur. Über das Mittelalter, bis in die Neuzeit, hat sich diese Tradition gehalten, aber auch
             zunehmend
             verändert. Wir wollen diesen Teil des gesellschaftlichen Lebens im 15. Jahrhundert aufgreifen. Dabei geht es uns nicht nur um den Spaß am Baden, sondern auch um das Leben einer alten Gepflogenheit.</p>
           <p>Wir orientieren uns am Badewesen und dem Beruf des Baders zwischen 1480 und 1580 im ländlichen Raum. Eine genaue Darstellung ist nicht immer exakt möglich. Wir versuchen dennoch uns an den wenigen Quellen, die das Badewesen zu
@@ -385,7 +385,7 @@
   <!-- Footer -->
   <footer>
     <div class="container text-center">
-      <p>Copyright &copy; www.zuberey.de 2023</p>
+      <p>Copyright &copy; www.zuberey.de 2024</p>
     </div>
   </footer>
 
